--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+:root {
+  --background-color-white: #fffefc;
+  --background-color-lightgrey: #f8f5f0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  /* background: var(--background-color-white); */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app-wrapper {
+  background: var(--background-color-white);
+  min-width: 450px;
+  min-height: 500px;
+  height: 70%;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px grey;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+  color: black;
+  margin-bottom: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-todo {
+  /* width: 100%; */
+  display: flex;
+  border: 1px solid black;
+  margin-bottom: 1rem;
+}
+
+.form-input {
+  width: 85%;
+  font-size: 2rem;
+}
+
+.form-submit-button {
+  width: 15%;
+}
+
+.todo-items-container {
+}
+
+.list-item {
+  list-style: none;
+  display: flex;
+  padding: 0.25rem;
+  border: 1px solid grey;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
+.completed {
+  text-decoration: line-through;
+  color: grey;
 }
